[package]
name = 'cloud-config'
version = '6.7.1'
license = 'Apache-2.0'
edition = '2021'
authors = ['Rivtower Technologies <contact@rivtower.com>']

[dependencies]
log = '0.4'
toml = '0.7'
hex = '0.4'
x509-parser = '0.15'
rand = '0.7'
libsm = '0.5'
serde_yaml = '0.9'
ophelia = '0.3'
ophelia-blst = '0.3'

[dependencies.clap]
version = '4.3'
features = ['derive']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.crypto_sm]
git = 'https://github.com/cita-cloud/crypto_sm'
package = 'crypto'
optional = true
branch = 'v6.7.1'

[dependencies.crypto_eth]
git = 'https://github.com/cita-cloud/crypto_eth'
package = 'crypto'
optional = true
branch = 'v6.7.1'

[dependencies.rcgen]
version = '0.11'
features = [
    'pem',
    'x509-parser',
]

[dependencies.k8s-openapi]
version = '0.18'
features = ['v1_24']
[profile.release]
debug = 1
[profile.release.package."*"]
debug = 0

[features]
default = ['sm']
sm = ['crypto_sm']
eth = ['crypto_eth']
