[package]
name = "cloud-config"
version = "6.7.1"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
crypto_sm = { git = "https://github.com/cita-cloud/crypto_sm", package = "crypto", optional = true }
crypto_eth = { git = "https://github.com/cita-cloud/crypto_eth", package = "crypto", optional = true }
toml = "0.7"
hex = "0.4"
rcgen = { version = "0.11", features = ["pem", "x509-parser"] }
x509-parser = "0.15"
rand = "0.7" # match with ophelia
libsm = "0.5"
k8s-openapi = { version = "0.18", features = ["v1_24"] }
serde_yaml = "0.9"
ophelia = "0.3"
ophelia-blst = "0.3"
cfg-if = "1.0"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1

[features]
default = ["sm"]
sm = ["crypto_sm"]
eth = ["crypto_eth"]
